--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,9 @@
 /* This file is for your main application css. */
 @import "./phoenix.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 /* Alerts and form errors */
 .alert {
@@ -34,3 +38,4 @@
   display: block;
   margin: -1rem 0 2rem;
 }
+
