--- a/lib/unbreakable_web/templates/page/index.html.eex
+++ b/lib/unbreakable_web/templates/page/index.html.eex
@@ -1,38 +1,35 @@
-<section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>Peace of mind from prototype to production</p>
-</section>
-
+<h1 class="text-6xl text-center text-gray-700">Your current streaks</h1>
 <section class="row">
   <article class="column">
-    <h2 class="text-5xl text-purple-400">Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.5/CHANGELOG.md">v1.5 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-    </ul>
-  </article>
+    <div class="mx-8">(Consecutive days)</div>
+    <table>
+      
+      <tr class="text-4xl my-4 text-purple-400">
+        <td class="w-1/5">Sleep 8 hours</td>
+        <td class="w-full pl-12 ">
+          <div class="inline-block my-1 w-1/12 pl-4 bg-indigo-600 rounded-r-md text-white">1</div><td>
+        </tr>
+
+      <tr class="text-4xl my-4 text-purple-400">
+        <td>Live streaming</td>
+        <td class="w-full pl-12 ">
+          <div class="inline-block  my-1 w-1/2 pl-4 bg-indigo-600 rounded-r-md text-white">32 days</div><td>
+        </tr>
+
+      <tr class="text-4xl my-4 text-purple-400">
+        <td>Workout</td>
+        <td class="w-full pl-12 ">
+          <div class="inline-block  my-1 w-1/3 pl-4 bg-indigo-600 rounded-r-md text-white">8 days</div><td>
+      </tr>
+      <tr class="text-4xl my-4 text-purple-400">
+        <td>Don't eat sugar</td>
+        <td class="w-full pl-12 ">
+          <div class="inline-block my-1 w-1/6 pl-4 bg-indigo-600 rounded-r-md text-white">2 days</div><td>
+        </tr>
+      <tr class="text-4xl my-4 text-purple-400">
+        <td>Drink 2L of water</td>
+        <td class="w-full pl-12 ">
+          <div class="inline-block my-1 w-1/6 w-full pl-4 bg-indigo-600 rounded-r-md text-white">2048 days</div><td>
+        </tr>
+    </table>
 </section>
